# GoIT_web

./: Dockerfile  pyproject.toml
web_hw_1/: GOIT_web_hw_1.drawio  book_assistant.py  classes.py  errors.py  output_information.py  user_book.csv
web_hw_1_2/: GOIT_web_hw_1.drawio  classes.py  output_information.py  user_book.csv
web_hw_3/: clean_folder.py  hw_3_2.py
web_hw_4/: main.py
web_hw_4/html/: index.html
web_hw_4/storage/: data.json
web_hw_5/: main.py
