[tool.poetry]
name = "goit_web_hw_2"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yaroslawchovnyuk@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
